@@ -44,7 +44,7 @@ public class ConfirmPage_3 extends JFrame {
         myPanel.setOpaque(false);
 //        myPanel.setLayout(new FlowLayout());
 //        this.getLayeredPane().setLayout(null);
-        this.getLayeredPane().add(label3, new Integer(Integer.MIN_VALUE));
+        this.getLayeredPane().add(label3, Integer.valueOf(Integer.MIN_VALUE));
         this.setTitle("Passenger check-in system");
 //        this.setBounds(300, 300, background.getIconWidth(), background.getIconHeight());
         this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
@@ -73,12 +73,12 @@ public class ConfirmPage_3 extends JFrame {
                 BookNum.setText(EnterBN_3.getPsnTemp().getBookNumber());
                 Surname.setText(EnterBN_3.getPsnTemp().getSurName());
                 IDNum.setText(EnterBN_3.getPsnTemp().getPassengerId());
-                Depar.setText(EnterBN_3.getPsnTemp().getBoardingPass().getDeparture());
-                Desti.setText(EnterBN_3.getPsnTemp().getBoardingPass().getDestination());
-                ETA.setText(EnterBN_3.getPsnTemp().getBoardingPass().getETA());
-                ETC.setText(EnterBN_3.getPsnTemp().getBoardingPass().getETC());
-                ETD.setText(EnterBN_3.getPsnTemp().getBoardingPass().getETD());
-                Gate.setText(EnterBN_3.getPsnTemp().getBoardingPass().getGate());
+                Depar.setText(EnterBN_3.getFlight().getDeparture());
+                Desti.setText(EnterBN_3.getFlight().getDestination());
+                ETA.setText(EnterBN_3.getFlight().getETA());
+                ETC.setText(EnterBN_3.getFlight().getETC());
+                ETD.setText(EnterBN_3.getFlight().getETD());
+                Gate.setText(EnterBN_3.getFlight().getGate());
             } catch (Exception e1) {
                 e1.printStackTrace();
             }
